--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page Trackgenix</title>
+  </head>
+    <body>
+        <header>
+        <div></div>
+        <div>
+            <div>
+            <img src="../Semana-02/assets/menu.png" alt="" />
+            </div>
+            <form>
+            <img src="../Semana-02/assets/search.jpg" alt="" />
+            <input type="search" name="search" />
+            </form>
+        </div>
+        </header>
+        <aside>
+            <div>
+                <div>
+                    <div>
+                        <button>Menu</button>
+                    </div>
+                    <div>
+                        <button>Home</button>
+                    </div>
+                    <div>
+                        <button>SignUp</button>
+                    </div>
+                    <div>
+                        <button>Login</button>
+                    </div>
+                    <div>
+                        <button>Contact</button>
+                    </div>
+                </div>
+                <div>
+                    <img src="../Semana-02/assets/mail.png" alt="" />
+                    <a href="" target="_blank">trackgenix@gmail.com</a>
+                    <img src="../Semana-02/assets/phone.png" alt="" />
+                    <a href="" target="_blank">(+54) 4545-9999</a>
+                    <img src="../Semana-02/assets/adress.png" alt="" />
+                    <a href="" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
+                </div>
+            </div>
+        </aside>
+    </body>
 </html>
