--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -6,47 +6,206 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page Trackgenix</title>
   </head>
-    <body>
-        <header>
-        <div></div>
+  <body>
+    <header>
+      <div>
         <div>
-            <div>
-            <img src="../Semana-02/assets/menu.png" alt="" />
-            </div>
-            <form>
-            <img src="../Semana-02/assets/search.jpg" alt="" />
-            <input type="search" name="search" />
-            </form>
+          <img src="../Semana-02/assets/img/menu.png" alt="" />
         </div>
-        </header>
-        <aside>
+      </div>
+      <div>
+        <form>
+          <img src="../Semana-02/assets/img/search.png" alt="" />
+          <input type="search" name="search" />
+        </form>
+      </div>
+    </header>
+    <section>
+      <aside>
+        <div>
+          <div>
             <div>
-                <div>
-                    <div>
-                        <button>Menu</button>
-                    </div>
-                    <div>
-                        <button>Home</button>
-                    </div>
-                    <div>
-                        <button>SignUp</button>
-                    </div>
-                    <div>
-                        <button>Login</button>
-                    </div>
-                    <div>
-                        <button>Contact</button>
-                    </div>
-                </div>
-                <div>
-                    <img src="../Semana-02/assets/mail.png" alt="" />
-                    <a href="" target="_blank">trackgenix@gmail.com</a>
-                    <img src="../Semana-02/assets/phone.png" alt="" />
-                    <a href="" target="_blank">(+54) 4545-9999</a>
-                    <img src="../Semana-02/assets/adress.png" alt="" />
-                    <a href="" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
-                </div>
+              <button>Menu</button>
             </div>
-        </aside>
-    </body>
+            <div>
+              <button>Home</button>
+            </div>
+            <div>
+              <button>SignUp</button>
+            </div>
+            <div>
+              <button>Login</button>
+            </div>
+            <div>
+              <button>Contact</button>
+            </div>
+          </div>
+          <div>
+            <img src="../Semana-02/assets/img/mail.png" alt="" />
+            <a href="#" target="_blank">trackgenix@gmail.com</a>
+            <img src="../Semana-02/assets/img/phone.png" alt="" />
+            <a href="#" target="_blank">(+54) 4545-9999</a>
+            <img src="../Semana-02/assets/img/adress.png" alt="" />
+            <a href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
+          </div>
+        </div>
+      </aside>
+      <article>
+        <div>
+          <h1>TRACKGENIX</h1>
+          <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
+          <p>
+            The time control software to manage your employees' time in the
+            easiest, fastest and most intuitive way.
+          </p>
+          <a href="#" target="_blank"></a
+          ><button type="button">LEARN MORE</button>
+        </div>
+        <div>
+          <img src="../Semana-02/assets/img/Imagen_principal.png" alt="" />
+        </div>
+      </article>
+      <article>
+        <h2>Features</h2>
+        <div>
+          <a href="#">
+            <img src="../Semana-02/assets/img/clock.png" alt="" />
+            <p>Hours log</p>
+          </a>
+          <div>
+            <a href="#">
+              <img src="../Semana-02/assets/img/Vector.png" alt="" />
+              <p>Reports</p>
+            </a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="../Semana-02/assets/img/search.png" alt="" />
+              <p>Resource management</p>
+            </a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="../Semana-02/assets/img/people.png" alt="" />
+              <p>Multiple role</p>
+            </a>
+          </div>
+        </div>
+      </article>
+      <article>
+        <h2>Why use Trackgenix?</h2>
+        <div>
+          <img src="../Semana-02/assets/img/why_use.png" alt="" />
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Productivity booster</a></li>
+            <li><a href="#">Work traceability</a></li>
+            <li><a href="#">Leadership and team management</a></li>
+            <li><a href="#">Decisionmaking</a></li>
+          </ul>
+        </div>
+      </article>
+      <article>
+        <h2>Ask for more information</h2>
+        <div>
+          <form action="#">
+            <input type="text" name="name" placeholder="Name" required />
+            <input type="email" name="email" placeholder="Email" required />
+            <select name="category" required>
+              <option value="0" disabled selected>-Category-</option>
+              <option value="1">Employee</option>
+              <option value="2">Employee PM</option>
+              <option value="2">Admin</option>
+              <option value="2">SuperAdmin</option>
+            </select>
+            <textarea
+              name="text"
+              cols="30"
+              rows="10"
+              placeholder="Message"
+              required
+            ></textarea>
+            <input type="reset" value="Cancel" />
+            <input type="submit" value="Send" />
+          </form>
+        </div>
+      </article>
+      <article>
+        <h2>Our history</h2>
+        <div>
+          <p>
+            Since 2012, we’ve helped countless companies across the globe build
+            applications that empower growth, leave a lasting impression, and
+            transform their user experience. GigaTech was created in 2012 by a
+            trio of colleagues who met through a coding bootcamp. They continue
+            to perfect the craft of app development and make a name for
+            themselves.
+          </p>
+          <img src="../Semana-02/assets/img/history.png" alt="" />
+        </div>
+      </article>
+      <article>
+        <div>
+          <ul>
+            <li>
+              <a href="#">Products</a>
+              <ul>
+                <a href="#">
+                  <li>Features</li>
+                </a>
+                <a href="#">
+                  <li>Downloads</li>
+                </a>
+                <a href="#">
+                  <li>Integrations</li>
+                </a>
+                <a href="#">
+                  <li>Additional features</li>
+                </a>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#"> Company </a>
+              <ul>
+                <a href="#">
+                  <li>About us</li>
+                </a>
+                <a href="#">
+                  <li>Trusted by</li>
+                </a>
+                <a href="#">
+                  <li>Resources</li>
+                </a>
+                <a href="#">
+                  <li>Clients</li>
+                </a>
+              </ul>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#"> Support </a>
+              <ul>
+                <a href="#">
+                  <li>Help</li>
+                </a>
+                <a href="#">
+                  <li>Tutorial</li>
+                </a>
+                <a href="#">
+                  <li>API</li>
+                </a>
+                <a href="#">
+                  <li>Contact</li>
+                </a>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
+  </body>
 </html>
