BaSP-W02-2022: add the footer and working on it, add some images and buttons for tablet format

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -9,15 +9,18 @@
   <body>
     <header>
       <div>
-        <div>
+        <figure>
           <img src="../Semana-02/assets/img/menu.png" alt="" />
-        </div>
-      </div>
-      <div>
+        </figure>
+        <div>
         <form>
-          <img src="../Semana-02/assets/img/search.png" alt="" />
+          <figure>
+            <img src="../Semana-02/assets/img/search.png" alt="" />
+          </figure>
           <input type="search" name="search" />
         </form>
+        </div>
+      <button type="button" target="_blank">Know more</button>
       </div>
     </header>
     <section>
@@ -25,27 +28,35 @@
         <div>
           <div>
             <div>
-              <button>Menu</button>
+              <h2>Menu</h2>
             </div>
+            <nav>
+              <div>
+                <button>Home</button>
+              </div>
+              <div>
+                <button>SignUp</button>
+              </div>
+              <div>
+                <button>Login</button>
+              </div>
+            </nav>
             <div>
-              <button>Home</button>
-            </div>
-            <div>
-              <button>SignUp</button>
-            </div>
-            <div>
-              <button>Login</button>
-            </div>
-            <div>
-              <button>Contact</button>
+              <h2>Contact</h2>
             </div>
           </div>
           <div>
-            <img src="../Semana-02/assets/img/mail.png" alt="" />
+            <figure>
+              <img src="../Semana-02/assets/img/mail.png" alt="" />
+            </figure>
             <a href="#" target="_blank">trackgenix@gmail.com</a>
-            <img src="../Semana-02/assets/img/phone.png" alt="" />
+            <figure>
+              <img src="../Semana-02/assets/img/phone.png" alt="" />
+            </figure>
             <a href="#" target="_blank">(+54) 4545-9999</a>
-            <img src="../Semana-02/assets/img/adress.png" alt="" />
+            <figure>
+              <img src="../Semana-02/assets/img/adress.png" alt="" />
+            </figure>
             <a href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
           </div>
         </div>
@@ -68,25 +79,38 @@
       <article>
         <h2>Features</h2>
         <div>
+          <figure>
+            <img src="../Semana-02/assets/img/features.png" alt="">
+          </figure>
+        </div>
+        <div>
           <a href="#">
-            <img src="../Semana-02/assets/img/clock.png" alt="" />
+            <figure>
+              <img src="../Semana-02/assets/img/clock.png" alt="" />
+            </figure>
             <p>Hours log</p>
           </a>
           <div>
             <a href="#">
-              <img src="../Semana-02/assets/img/Vector.png" alt="" />
+              <figure>
+                <img src="../Semana-02/assets/img/Vector.png" alt="" />
+              </figure>
               <p>Reports</p>
             </a>
           </div>
           <div>
             <a href="#">
-              <img src="../Semana-02/assets/img/search.png" alt="" />
+              <figure>
+                <img src="../Semana-02/assets/img/search.png" alt="" />
+              </figure>
               <p>Resource management</p>
             </a>
           </div>
           <div>
             <a href="#">
-              <img src="../Semana-02/assets/img/people.png" alt="" />
+              <figure>
+                <img src="../Semana-02/assets/img/people.png" alt="" />
+              </figure>
               <p>Multiple role</p>
             </a>
           </div>
@@ -94,9 +118,9 @@
       </article>
       <article>
         <h2>Why use Trackgenix?</h2>
-        <div>
+        <figure>
           <img src="../Semana-02/assets/img/why_use.png" alt="" />
-        </div>
+        </figure>
         <div>
           <ul>
             <li><a href="#">Productivity booster</a></li>
@@ -134,22 +158,31 @@
       <article>
         <h2>Our history</h2>
         <div>
-          <p>
-            Since 2012, we’ve helped countless companies across the globe build
-            applications that empower growth, leave a lasting impression, and
-            transform their user experience. GigaTech was created in 2012 by a
-            trio of colleagues who met through a coding bootcamp. They continue
-            to perfect the craft of app development and make a name for
-            themselves.
-          </p>
-          <img src="../Semana-02/assets/img/history.png" alt="" />
+            <p>
+              Since 2012, we’ve helped countless companies across the globe build
+              applications that empower growth, leave a lasting impression, and
+              transform their user experience.
+            </p>
+            <button type="button" target="_blank">Read More</button>
+            <figure>
+              <img src="../Semana-02/assets/img/history2.png" alt="">
+            </figure>
+            <p> 
+              GigaTech was created in 2012 by a
+              trio of colleagues who met through a coding bootcamp. They continue
+              to perfect the craft of app development and make a name for
+              themselves.
+            </p>
+          <figure>
+            <img src="../Semana-02/assets/img/history.png" alt="" />
+          </figure>
         </div>
       </article>
       <article>
         <div>
           <ul>
             <li>
-              <a href="#">Products</a>
+              <h3>Products</h3>
               <ul>
                 <a href="#">
                   <li>Features</li>
@@ -168,7 +201,7 @@
           </ul>
           <ul>
             <li>
-              <a href="#"> Company </a>
+              <h3>Company</h3>
               <ul>
                 <a href="#">
                   <li>About us</li>
@@ -187,7 +220,7 @@
           </ul>
           <ul>
             <li>
-              <a href="#"> Support </a>
+              <h3>Support</h3>
               <ul>
                 <a href="#">
                   <li>Help</li>
@@ -206,6 +239,30 @@
           </ul>
         </div>
       </article>
+      <footer>
+        <div>
+          <a href="#">
+            <img src="../Semana-02/assets/img/twitter.png" alt="">
+          </a>
+          <a href="#">
+            <img src="../Semana-02/assets/img/face.png" alt="">
+          </a>
+          <a href="#">
+            <img src="../Semana-02/assets/img/linkedin.png" alt="">
+          </a>
+          <a href="#">
+            <img src="../Semana-02/assets/img/instagram.png" alt="">
+          </a>
+          <a href="#">
+            <img src="../Semana-02/assets/img/github.png" alt="">
+          </a>
+        </div>
+        <div>
+          <p>Rosario, Argentina</p>
+          <p>Copyright &#169 GigaTech Software Solutions SA.</p>
+          <P>All rights reserved.</P>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
