BaSP-W02-2022: fix h3 tag in ul tag

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -180,63 +180,69 @@
       </article>
       <article>
         <div>
-          <ul>
-            <li>
-              <h3>Products</h3>
-              <ul>
-                <a href="#">
-                  <li>Features</li>
-                </a>
-                <a href="#">
-                  <li>Downloads</li>
-                </a>
-                <a href="#">
-                  <li>Integrations</li>
-                </a>
-                <a href="#">
-                  <li>Additional features</li>
-                </a>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <h3>Company</h3>
-              <ul>
-                <a href="#">
-                  <li>About us</li>
-                </a>
-                <a href="#">
-                  <li>Trusted by</li>
-                </a>
-                <a href="#">
-                  <li>Resources</li>
-                </a>
-                <a href="#">
-                  <li>Clients</li>
-                </a>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <h3>Support</h3>
-              <ul>
-                <a href="#">
-                  <li>Help</li>
-                </a>
-                <a href="#">
-                  <li>Tutorial</li>
-                </a>
-                <a href="#">
-                  <li>API</li>
-                </a>
-                <a href="#">
-                  <li>Contact</li>
-                </a>
-              </ul>
-            </li>
-          </ul>
+          <div>
+            <h3>Products</h3>
+            <ul>
+              <li>
+                <ul>
+                  <a href="#">
+                    <li>Features</li>
+                  </a>
+                  <a href="#">
+                    <li>Downloads</li>
+                  </a>
+                  <a href="#">
+                    <li>Integrations</li>
+                  </a>
+                  <a href="#">
+                    <li>Additional features</li>
+                  </a>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>Company</h3>
+            <ul>
+              <li>
+                <ul>
+                  <a href="#">
+                    <li>About us</li>
+                  </a>
+                  <a href="#">
+                    <li>Trusted by</li>
+                  </a>
+                  <a href="#">
+                    <li>Resources</li>
+                  </a>
+                  <a href="#">
+                    <li>Clients</li>
+                  </a>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>Support</h3>
+            <ul>
+              <li>
+                <ul>
+                  <a href="#">
+                    <li>Help</li>
+                  </a>
+                  <a href="#">
+                    <li>Tutorial</li>
+                  </a>
+                  <a href="#">
+                    <li>API</li>
+                  </a>
+                  <a href="#">
+                    <li>Contact</li>
+                  </a>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
       </article>
       <footer>
