BaSP-W02-2022: fix some errors on tags, change aside and article tags for nav and section

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -1,274 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page Trackgenix</title>
-  </head>
-  <body>
-    <header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Landing Page Trackgenix</title>
+</head>
+
+<body>
+  <header>
+    <div>
+      <figure>
+        <img src="../Semana-02/assets/img/menu.png" alt="" />
+      </figure>
       <div>
-        <figure>
-          <img src="../Semana-02/assets/img/menu.png" alt="" />
-        </figure>
-        <div>
         <form>
           <figure>
             <img src="../Semana-02/assets/img/search.png" alt="" />
           </figure>
           <input type="search" name="search" />
         </form>
-        </div>
-      <button type="button" target="_blank">Know more</button>
       </div>
-    </header>
-    <section>
-      <aside>
-        <div>
-          <div>
-            <div>
-              <h2>Menu</h2>
-            </div>
-            <nav>
-              <div>
-                <button>Home</button>
-              </div>
-              <div>
-                <button>SignUp</button>
-              </div>
-              <div>
-                <button>Login</button>
-              </div>
-            </nav>
-            <div>
-              <h2>Contact</h2>
-            </div>
-          </div>
-          <div>
-            <figure>
-              <img src="../Semana-02/assets/img/mail.png" alt="" />
-            </figure>
-            <a href="#" target="_blank">trackgenix@gmail.com</a>
-            <figure>
-              <img src="../Semana-02/assets/img/phone.png" alt="" />
-            </figure>
-            <a href="#" target="_blank">(+54) 4545-9999</a>
-            <figure>
-              <img src="../Semana-02/assets/img/adress.png" alt="" />
-            </figure>
-            <a href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
-          </div>
-        </div>
-      </aside>
-      <article>
-        <div>
-          <h1>TRACKGENIX</h1>
-          <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
-          <p>
-            The time control software to manage your employees' time in the
-            easiest, fastest and most intuitive way.
-          </p>
-          <a href="#" target="_blank"></a
-          ><button type="button">LEARN MORE</button>
-        </div>
-        <div>
-          <img src="../Semana-02/assets/img/Imagen_principal.png" alt="" />
-        </div>
-      </article>
-      <article>
-        <h2>Features</h2>
-        <div>
-          <figure>
-            <img src="../Semana-02/assets/img/features.png" alt="">
-          </figure>
-        </div>
-        <div>
-          <a href="#">
-            <figure>
-              <img src="../Semana-02/assets/img/clock.png" alt="" />
-            </figure>
-            <p>Hours log</p>
-          </a>
-          <div>
-            <a href="#">
-              <figure>
-                <img src="../Semana-02/assets/img/Vector.png" alt="" />
-              </figure>
-              <p>Reports</p>
-            </a>
-          </div>
-          <div>
-            <a href="#">
-              <figure>
-                <img src="../Semana-02/assets/img/search.png" alt="" />
-              </figure>
-              <p>Resource management</p>
-            </a>
-          </div>
-          <div>
-            <a href="#">
-              <figure>
-                <img src="../Semana-02/assets/img/people.png" alt="" />
-              </figure>
-              <p>Multiple role</p>
-            </a>
-          </div>
-        </div>
-      </article>
-      <article>
-        <h2>Why use Trackgenix?</h2>
+      <a href="#" target="_blank"><button type="button">Know more</button></a>
+    </div>
+  </header>
+  <nav>
+    <div>
+      <h2>Menu</h2>
+    </div>
+    <div>
+      <button>Home</button>
+    </div>
+    <div>
+      <button>SignUp</button>
+    </div>
+    <div>
+      <button>Login</button>
+    </div>
+    <div>
+      <h2>Contact</h2>
+    </div>
+    <div>
+      <figure>
+        <img src="../Semana-02/assets/img/mail.png" alt="" />
+      </figure>
+      <a href="#" target="_blank">trackgenix@gmail.com</a>
+      <figure>
+        <img src="../Semana-02/assets/img/phone.png" alt="" />
+      </figure>
+      <a href="#" target="_blank">(+54) 4545-9999</a>
+      <figure>
+        <img src="../Semana-02/assets/img/adress.png" alt="" />
+      </figure>
+      <a href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
+    </div>
+  </nav>
+  <section>
+    <div>
+      <h1>TRACKGENIX</h1>
+      <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
+      <p>
+        The time control software to manage your employees' time in the
+        easiest, fastest and most intuitive way.
+      </p>
+      <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
+    </div>
+    <div>
+      <img src="../Semana-02/assets/img/Imagen_principal.png" alt="" />
+    </div>
+  </section>
+  <section>
+    <h2>Features</h2>
+    <div>
+      <figure>
+        <img src="../Semana-02/assets/img/features.png" alt="">
+      </figure>
+    </div>
+    <div>
+      <a href="#">
         <figure>
-          <img src="../Semana-02/assets/img/why_use.png" alt="" />
+          <img src="../Semana-02/assets/img/clock.png" alt="" />
         </figure>
-        <div>
-          <ul>
-            <li><a href="#">Productivity booster</a></li>
-            <li><a href="#">Work traceability</a></li>
-            <li><a href="#">Leadership and team management</a></li>
-            <li><a href="#">Decisionmaking</a></li>
-          </ul>
-        </div>
-      </article>
-      <article>
-        <h2>Ask for more information</h2>
-        <div>
-          <form action="#">
-            <input type="text" name="name" placeholder="Name" required />
-            <input type="email" name="email" placeholder="Email" required />
-            <select name="category" required>
-              <option value="0" disabled selected>-Category-</option>
-              <option value="1">Employee</option>
-              <option value="2">Employee PM</option>
-              <option value="2">Admin</option>
-              <option value="2">SuperAdmin</option>
-            </select>
-            <textarea
-              name="text"
-              cols="30"
-              rows="10"
-              placeholder="Message"
-              required
-            ></textarea>
-            <input type="reset" value="Cancel" />
-            <input type="submit" value="Send" />
-          </form>
-        </div>
-      </article>
-      <article>
-        <h2>Our history</h2>
-        <div>
-            <p>
-              Since 2012, we’ve helped countless companies across the globe build
-              applications that empower growth, leave a lasting impression, and
-              transform their user experience.
-            </p>
-            <button type="button" target="_blank">Read More</button>
-            <figure>
-              <img src="../Semana-02/assets/img/history2.png" alt="">
-            </figure>
-            <p> 
-              GigaTech was created in 2012 by a
-              trio of colleagues who met through a coding bootcamp. They continue
-              to perfect the craft of app development and make a name for
-              themselves.
-            </p>
+        <p>Hours log</p>
+      </a>
+      <div>
+        <a href="#">
           <figure>
-            <img src="../Semana-02/assets/img/history.png" alt="" />
+            <img src="../Semana-02/assets/img/Vector.png" alt="" />
           </figure>
-        </div>
-      </article>
-      <article>
-        <div>
-          <div>
-            <h3>Products</h3>
+          <p>Reports</p>
+        </a>
+      </div>
+      <div>
+        <a href="#">
+          <figure>
+            <img src="../Semana-02/assets/img/search.png" alt="" />
+          </figure>
+          <p>Resource management</p>
+        </a>
+      </div>
+      <div>
+        <a href="#">
+          <figure>
+            <img src="../Semana-02/assets/img/people.png" alt="" />
+          </figure>
+          <p>Multiple role</p>
+        </a>
+      </div>
+    </div>
+  </section>
+  <section>
+    <h2>Why use Trackgenix?</h2>
+    <figure>
+      <img src="../Semana-02/assets/img/why_use.png" alt="" />
+    </figure>
+    <div>
+      <ul>
+        <li><a href="#">Productivity booster</a></li>
+        <li><a href="#">Work traceability</a></li>
+        <li><a href="#">Leadership and team management</a></li>
+        <li><a href="#">Decisionmaking</a></li>
+      </ul>
+    </div>
+  </section>
+  <section>
+    <h2>Ask for more information</h2>
+    <div>
+      <form action="#">
+        <input type="text" name="name" placeholder="Name" required />
+        <input type="email" name="email" placeholder="Email" required />
+        <select name="category" required>
+          <option value="0" disabled selected>-Category-</option>
+          <option value="1">Employee</option>
+          <option value="2">Employee PM</option>
+          <option value="2">Admin</option>
+          <option value="2">SuperAdmin</option>
+        </select>
+        <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
+        <input type="reset" value="Cancel" />
+        <input type="submit" value="Send" />
+      </form>
+    </div>
+  </section>
+  <section>
+    <h2>Our history</h2>
+    <div>
+      <p>
+        Since 2012, we’ve helped countless companies across the globe build
+        applications that empower growth, leave a lasting impression, and
+        transform their user experience.
+      </p>
+      <a href="#" target="_blank"><button type="button">Read More</button></a>
+      <figure>
+        <img src="../Semana-02/assets/img/history2.png" alt="">
+      </figure>
+      <p>
+        GigaTech was created in 2012 by a
+        trio of colleagues who met through a coding bootcamp. They continue
+        to perfect the craft of app development and make a name for
+        themselves.
+      </p>
+      <figure>
+        <img src="../Semana-02/assets/img/history.png" alt="" />
+      </figure>
+    </div>
+  </section>
+  <section>
+    <div>
+      <div>
+        <h3>Products</h3>
+        <ul>
+          <li>
             <ul>
-              <li>
-                <ul>
-                  <a href="#">
-                    <li>Features</li>
-                  </a>
-                  <a href="#">
-                    <li>Downloads</li>
-                  </a>
-                  <a href="#">
-                    <li>Integrations</li>
-                  </a>
-                  <a href="#">
-                    <li>Additional features</li>
-                  </a>
-                </ul>
-              </li>
+              <a href="#">
+                <li>Features</li>
+              </a>
+              <a href="#">
+                <li>Downloads</li>
+              </a>
+              <a href="#">
+                <li>Integrations</li>
+              </a>
+              <a href="#">
+                <li>Additional features</li>
+              </a>
             </ul>
-          </div>
-          <div>
-            <h3>Company</h3>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3>Company</h3>
+        <ul>
+          <li>
             <ul>
-              <li>
-                <ul>
-                  <a href="#">
-                    <li>About us</li>
-                  </a>
-                  <a href="#">
-                    <li>Trusted by</li>
-                  </a>
-                  <a href="#">
-                    <li>Resources</li>
-                  </a>
-                  <a href="#">
-                    <li>Clients</li>
-                  </a>
-                </ul>
-              </li>
+              <a href="#">
+                <li>About us</li>
+              </a>
+              <a href="#">
+                <li>Trusted by</li>
+              </a>
+              <a href="#">
+                <li>Resources</li>
+              </a>
+              <a href="#">
+                <li>Clients</li>
+              </a>
             </ul>
-          </div>
-          <div>
-            <h3>Support</h3>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3>Support</h3>
+        <ul>
+          <li>
             <ul>
-              <li>
-                <ul>
-                  <a href="#">
-                    <li>Help</li>
-                  </a>
-                  <a href="#">
-                    <li>Tutorial</li>
-                  </a>
-                  <a href="#">
-                    <li>API</li>
-                  </a>
-                  <a href="#">
-                    <li>Contact</li>
-                  </a>
-                </ul>
-              </li>
+              <a href="#">
+                <li>Help</li>
+              </a>
+              <a href="#">
+                <li>Tutorial</li>
+              </a>
+              <a href="#">
+                <li>API</li>
+              </a>
+              <a href="#">
+                <li>Contact</li>
+              </a>
             </ul>
-          </div>
-        </div>
-      </article>
-      <footer>
-        <div>
-          <a href="#">
-            <img src="../Semana-02/assets/img/twitter.png" alt="">
-          </a>
-          <a href="#">
-            <img src="../Semana-02/assets/img/face.png" alt="">
-          </a>
-          <a href="#">
-            <img src="../Semana-02/assets/img/linkedin.png" alt="">
-          </a>
-          <a href="#">
-            <img src="../Semana-02/assets/img/instagram.png" alt="">
-          </a>
-          <a href="#">
-            <img src="../Semana-02/assets/img/github.png" alt="">
-          </a>
-        </div>
-        <div>
-          <p>Rosario, Argentina</p>
-          <p>Copyright &#169 GigaTech Software Solutions SA.</p>
-          <P>All rights reserved.</P>
-        </div>
-      </footer>
-    </section>
-  </body>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div>
+      <a href="#" target="_blank">
+        <img src="../Semana-02/assets/img/twitter.png" alt="">
+      </a>
+      <a href="#" target="_blank">
+        <img src="../Semana-02/assets/img/face.png" alt="">
+      </a>
+      <a href="#" target="_blank">
+        <img src="../Semana-02/assets/img/linkedin.png" alt="">
+      </a>
+      <a href="#" target="_blank">
+        <img src="../Semana-02/assets/img/instagram.png" alt="">
+      </a>
+      <a href="#" target="_blank">
+        <img src="../Semana-02/assets/img/github.png" alt="">
+      </a>
+    </div>
+    <div>
+      <p>Rosario, Argentina</p>
+      <p>Copyright &#169 GigaTech Software Solutions SA.</p>
+      <P>All rights reserved.</P>
+    </div>
+  </footer>
+</body>
+
 </html>
