BaSP-W02-2022: add some figure tag that I forgot on footer

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -236,19 +236,29 @@
   <footer>
     <div>
       <a href="#" target="_blank">
-        <img src="../Semana-02/assets/img/twitter.png" alt="">
+        <figure>
+          <img src="../Semana-02/assets/img/twitter.png" alt="">
+        </figure>
       </a>
       <a href="#" target="_blank">
-        <img src="../Semana-02/assets/img/face.png" alt="">
+        <figure>
+          <img src="../Semana-02/assets/img/face.png" alt="">
+        </figure>
       </a>
       <a href="#" target="_blank">
-        <img src="../Semana-02/assets/img/linkedin.png" alt="">
+        <figure>
+          <img src="../Semana-02/assets/img/linkedin.png" alt="">
+        </figure>
       </a>
       <a href="#" target="_blank">
-        <img src="../Semana-02/assets/img/instagram.png" alt="">
+        <figure>
+          <img src="../Semana-02/assets/img/instagram.png" alt="">
+        </figure>
       </a>
       <a href="#" target="_blank">
-        <img src="../Semana-02/assets/img/github.png" alt="">
+        <figure>
+          <img src="../Semana-02/assets/img/github.png" alt="">
+        </figure>
       </a>
     </div>
     <div>
