BaSP-W03-2022: make some changes in nav on index, giving style to nav on css

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -16,28 +16,32 @@
     <figure class="header-menu">
       <img class="menu" src="../assets/img/menu.png" alt="" />
     </figure>
-    <input class="header-search" type="search" name="search" />
-    <img src="../assets/img/search.png" alt="" class="header-search-icon">
-      <button type="button" class="header-know-more-btn">Know more</button>
+    <form action="" class="header-search">
+      <input type="search" name="search" />
+      <img class="header-search-img" src="../assets/img/search.png" alt="">
+    </form>
+    <button type="button" class="header-know-more-btn">Know more</button>
   </header>
   <nav>
-    <div>
-      <h2>Menu</h2>
-    </div>
-    <div>
-      <button>Home</button>
-    </div>
-    <div>
-      <button>SignUp</button>
-    </div>
-    <div>
-      <button>Login</button>
-    </div>
-    <div>
+    <h2 class="nav-menu">Menu</h2>
+    <div class="nav-menu-underline"></div>
+<ul class="nav-ul">
+  <li>
+    <a href="#"> Home</a>
+  </li>
+  <div></div>
+  <li>
+    <a href="#">SignUp</a>
+  </li>
+  <div></div>
+  <li>
+    <a href="#">Login</a>
+  </li>
+  <div></div>
+</ul>
       <h2>Contact</h2>
-    </div>
-    <div>
-      <figure>
+
+      <!-- <figure>
         <img src="../assets/img/mail.png" alt="" />
       </figure>
       <a href="#" target="_blank">trackgenix@gmail.com</a>
@@ -49,9 +53,9 @@
         <img src="../assets/img/adress.png" alt="" />
       </figure>
       <a href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
-    </div>
+    </div> -->
   </nav>
-  <main>
+  <!-- <main>
     <section>
       <div>
         <h1>TRACKGENIX</h1>
@@ -229,8 +233,8 @@
         </div>
       </div>
     </section>
-  </main>
-  <footer>
+  </main> 
+    <footer>
     <div>
       <a href="#" target="_blank">
         <figure>
@@ -263,7 +267,7 @@
       <p>Copyright &#169 GigaTech Software Solutions SA.</p>
       <P>All rights reserved.</P>
     </div>
-  </footer>
+  </footer>-->
 </body>
 
 </html>
