--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="header.css" type="text/css">
+  <link rel="stylesheet" href="sidebar.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
